--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         
     }
     video {
-            position: fixed;
+            position: absolute;
             right: 0;
             bottom: 0;
             min-width: 100%;
