replace cat images

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div class="center-content">
         <div class="frame">
             <img class="frame-img" src="images/frame.png" alt="Frame">
-            <img class="overlay-img" src="images/cat-rave.gif" alt="Animated">
+            <img class="overlay-img" src="images\1cat.png" alt="Animated">
         </div>
         <audio id="myAudio" src="media/audio.mp3"></audio>
         <button id="playPauseBtn">
