--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
             playPauseBtn.addEventListener("click", function() {
                 if (myAudio.paused) {
                     myAudio.play();
-                    playPauseIcon.src = "pause.png";
+                    playPauseIcon.src = "images\\pause.png";
                     playPauseIcon.alt = "Pause";
                     catChange.src="images\\2cat.png";
                 } else {
                     myAudio.pause();
-                    playPauseIcon.src = "play.png";
+                    playPauseIcon.src = "images\\play.png";
                     playPauseIcon.alt = "Play";
                     catChange.src="images\\1cat.png";
                 }
