--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
     cursor: pointer;
     pointer-events: auto; /* Щоб саме котик реагував на кліки */
 }
+@media (max-width: 768px) {
+    #catChange {
+        max-height: 60vh; /* на мобілках трохи менше */
+    }
+}
 
 
 
