--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
 
     catChange.addEventListener("click", function () {
         if (!isGifPlaying) {
-            catChange.src = "images/cat2.2.gif";
+            catChange.src = "images\\cat2.2.gif";
         } else {
-            catChange.src = "images/1cat.png";
+            catChange.src = "images\\1cat.png";
         }
 
         isGifPlaying = !isGifPlaying;
