--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
     <div id="catWrapper">
     <img id="catChange" src="images/1cat.png" alt="Cat">
-</div>
+    </div>
 
 
 
@@ -161,18 +161,23 @@
 
     <script>
     const catChange = document.getElementById("catChange");
+    const myAudio = document.getElementById("myAudio");
     let isGifPlaying = false;
 
     catChange.addEventListener("click", function () {
         if (!isGifPlaying) {
             catChange.src = "images\\cat2.2.gif";
+            myAudio.play();
         } else {
             catChange.src = "images\\1cat.png";
+            myAudio.pause();
+            myAudio.currentTime = 0; // Повертає на початок
         }
 
         isGifPlaying = !isGifPlaying;
     });
 </script>
+
 
 
 
