--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
     </video>
     <div class="menu">
         <a href="https://dexscreener.com/solana/94zzyccxyvm6tsmcwqgkbgtyc5fxm8c7u52nqr17jofx" target="_blank"><img src="images/menu1.png" alt="Menu 1"></a>
-        <a href="https://www.dextools.io/app/en/solana/pair-explorer/94zzYCcxyvM6tSmCWQGkbGtyC5fXm8C7U52NQr17Jofx?t=1716003354516" target="_blank"><img src="images/menu2.png" alt="Menu 2"></a>
-        <a href="https://t.me/ravecatsol" target="_blank"><img src="images/menu4.png" alt="Menu 3"></a>
-        <a href="https://twitter.com/RaveCatOnSol" target="_blank"><img src="images/menu3.png" alt="Menu 4"></a>
+        <a href="https://cleoemo.gumroad.com/l/catbuilding" target="_blank"><img src="images/menu2.png" alt="Menu 2"></a>
+        <a href="https://t.me/CleoemoCats" target="_blank"><img src="images/menu4.png" alt="Menu 3"></a>
+        <a href="https://x.com/CleoemoCats" target="_blank"><img src="images/menu3.png" alt="Menu 4"></a>
     </div>
     <div class="center-content">
 
