--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html><html><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RaveCat</title>
+    <title>CleoemoCats</title>
     <link rel="icon" type="image/gif" href="images/favicon.gif">
-    <link rel="icon" type="image/gif" href="images/favicon.png">
+    <link rel="icon" type="image/gif" href="images/1cat.png">
     <script>
         window.onload = function() {
           var context = new AudioContext();
