--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <a href="https://dexscreener.com/solana/8Y3VzKdiTkn1NP6eNMZNtRLWzfcm12VL2V1BU6Dvpump" target="_blank"><img src="images/menu1.png" alt="Menu 1"></a>
         <a href="https://cleoemo.gumroad.com/l/catbuilding" target="_blank"><img src="images/menu2.png" alt="Menu 2"></a>
         <a href="https://t.me/CleoemoCats" target="_blank"><img src="images/menu4.png" alt="Menu 3"></a>
-        <a href="https://x.com/CleoemoCats" target="_blank"><img src="images/menu3.png" alt="Menu 4"></a>
+        <a href="https://x.com/i/communities/1925821910945792156" target="_blank"><img src="images/menu3.png" alt="Menu 4"></a>
     </div>
     <div class="center-content">
 
